# galois

./: .gitignore  README.md  playground.ipynb  prorotype.ipynb  pyproject.toml
.github/workflows/: build.yml  test-and-lint.yml
src/galois/: collection.py  database.py  lsmtree.py  query_language.py  storage_engine.py
tests/: test_collection.py  test_database.py  test_query_language.py
