[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "galois"
version = "0.1.0"
authors = [{ name = "João Fernandes", email = "fernandesj@proton.me" }]
description = "A simple document store"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joaoflf/galois"
"Bug Tracker" = "https://github.com/joaoflf/galois/issues"

[project.optional-dependencies]
test = ["pytest"]
lint = ["black"]
